<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info_consulta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="5dp">
	<LinearLayout 
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
		<TextView
        	android:id="@+id/titulo_medico"
        	style="@style/TextTitulo"
        	android:layout_marginLeft="14dp"
        	android:layout_marginTop="16dp"
        	android:text="@string/medico" />

    	<TextView
        	android:id="@+id/nomeMedico"
        	style="@style/TextStyle"
        	android:layout_marginLeft="5dp"
        	android:layout_marginTop="16dp" />    
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
		
		<TextView
        	android:id="@+id/titulo_turno"
        	style="@style/TextTitulo"
        	android:layout_marginLeft="14dp"
        	android:layout_marginTop="5dp"
        	android:text="@string/turno" />

    	<TextView
        	android:id="@+id/nomeTurno"
        	style="@style/TextStyle"
        	android:layout_marginTop="5dp"
        	android:layout_marginLeft="5dp"/>    
	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
		<TextView
        	android:id="@+id/titulo_status"
        	style="@style/TextTitulo"
        	android:layout_marginLeft="14dp"
        	android:layout_marginTop="5dp"
        	android:text="@string/status" />

    	<TextView
        	android:id="@+id/nomeStatus"
        	style="@style/TextStyle"
        	android:layout_marginLeft="5dp"
        	android:layout_marginTop="5dp" />    
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
		<TextView
        	android:id="@+id/titulo_tipo"
        	style="@style/TextTitulo"
        	android:layout_marginLeft="14dp"
        	android:layout_marginTop="5dp"
        	android:text="@string/tipo" />

    	<TextView
        	android:id="@+id/nomeTipo"
        	style="@style/TextStyle"
        	android:layout_marginLeft="5dp"
        	android:layout_marginTop="5dp"/>    
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
		<TextView
        	android:id="@+id/titulo_data"
        	style="@style/TextTitulo"
        	android:layout_marginLeft="14dp"
        	android:layout_marginTop="5dp"
        	android:text="@string/data" />

    	<TextView
        	android:id="@+id/nomeData"
        	style="@style/TextStyle"
        	android:layout_marginLeft="5dp"
        	android:layout_marginTop="5dp" />    
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:paddingRight="5dp"
	    android:paddingLeft="5dp"
	    android:layout_marginTop="30dp">
		
	    <Button
	        android:id="@+id/bt_confirmar"
	        style="@style/button_text"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_weight="1"
	        android:background="@drawable/button_green"
	        android:layout_marginBottom="1dp"
	        android:text="@string/confimar"/>
	    
	    <Button
	        android:id = "@+id/bt_cancelar"
	        style="@style/button_text"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_weight="1"
	        android:layout_marginTop="1dp"
	        android:background="@drawable/button_red"
	        android:text="@string/cancelar"/>

	</LinearLayout>

</LinearLayout>
   